--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,10 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+
+# VS Code
+.vscode/
+
+# JetBrains (WebStorm, PyCharm, IntelliJ IDEA, PhpStorm, etc.)
+.idea/
+*.iml
