--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,13 @@
 # production
 /build
 
-# misc
+# macOS system files
 .DS_Store
+
+# Windows system files
+Thumbs.db
+desktop.ini
+$RECYCLE.BIN/
 
 # debug
 npm-debug.log*
