feat: ignore TypeScript incremental build file

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ yarn-error.log*
 # JetBrains (WebStorm, PyCharm, IntelliJ IDEA, PhpStorm, etc.)
 .idea/
 *.iml
+
+# Ignore TypeScript incremental build file
+tsconfig.tsbuildinfo
