--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,15 +26,7 @@ jobs:
         run: npm ci
 
       - name: Check Prettier
-        run: npm run format
-
-      - name: Commit changes (if any)
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add .
-          git commit -m "Auto-format code with Prettier" || echo "No changes to commit"
-          git push
+        run: npm run format:check
 
       - name: Run ESLint
         run: npm run lint
